--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
     "body-parser": "^1.19.1",
+    "config": "^3.3.7",
     "express": "^4.17.2",
     "module-alias": "^2.2.2",
     "mongoose": "^6.2.1"
   },
   "devDependencies": {
+    "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/module-alias": "^2.0.1",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.16",
     "@types/supertest": "^2.0.11",
     "jest": "^27.5.1",
